//! Health check and failover mechanisms

use std::collections::HashMap;
use std::sync::Arc;
use tokio::sync::RwLock;
use tracing::{debug, error, info, warn};

/// Health service for monitoring system components
pub struct HealthService {
    /// Component health states
    components: Arc<RwLock<HashMap<String, ComponentHealthState>>>,
    
    /// Start time for uptime calculation
    start_time: std::time::Instant,
    
    /// Health check intervals
    check_intervals: HashMap<String, std::time::Duration>,
}

/// Component health state
#[derive(Debug, Clone)]
pub struct ComponentHealthState {
    pub healthy: bool,
    pub status: String,
    pub last_check_timestamp: u64,
    pub metrics: HashMap<String, String>,
    pub consecutive_failures: u32,
}

/// Health check result
#[derive(Debug, Clone)]
pub struct HealthCheckResult {
    pub healthy: bool,
    pub components: HashMap<String, ComponentHealthState>,
    pub uptime_seconds: u64,
}

impl HealthService {
    /// Create a new health service
    pub fn new() -> Self {
        let mut check_intervals = HashMap::new();
        check_intervals.insert("svm_processor".to_string(), std::time::Duration::from_secs(10));
        check_intervals.insert("message_bus".to_string(), std::time::Duration::from_secs(5));
        check_intervals.insert("grpc_server".to_string(), std::time::Duration::from_secs(5));
        check_intervals.insert("connection_pool".to_string(), std::time::Duration::from_secs(30));
        
        Self {
            components: Arc::new(RwLock::new(HashMap::new())),
            start_time: std::time::Instant::now(),
            check_intervals,
        }
    }
    
    /// Start health monitoring
    pub fn start_monitoring(self: Arc<Self>) {
        // Start monitoring tasks for each component
        for (component, interval) in self.check_intervals.clone() {
            let service = self.clone();
            tokio::spawn(async move {
                let mut interval_timer = tokio::time::interval(interval);
                
                loop {
                    interval_timer.tick().await;
                    service.check_component(&component).await;
                }
            });
        }
    }
    
    /// Check health of a specific component
    async fn check_component(&self, component: &str) {
        debug!("Checking health of component: {}", component);
        
        let health_result = match component {
            "svm_processor" => self.check_svm_processor().await,
            "message_bus" => self.check_message_bus().await,
            "grpc_server" => self.check_grpc_server().await,
            "connection_pool" => self.check_connection_pool().await,
            _ => {
                warn!("Unknown component: {}", component);
                return;
            }
        };
        
        let mut components = self.components.write().await;
        let state = components.entry(component.to_string()).or_insert(ComponentHealthState {
            healthy: true,
            status: "Unknown".to_string(),
            last_check_timestamp: 0,
            metrics: HashMap::new(),
            consecutive_failures: 0,
        });
        
        if health_result.is_ok() {
            state.healthy = true;
            state.status = "Healthy".to_string();
            state.consecutive_failures = 0;
            state.metrics = health_result.unwrap_or_default();
        } else {
            state.healthy = false;
            state.status = format!("Unhealthy: {}", health_result.err().unwrap());
            state.consecutive_failures += 1;
            
            // Trigger failover if too many consecutive failures
            if state.consecutive_failures >= 3 {
                error!("Component {} has failed {} times consecutively, triggering failover", 
                    component, state.consecutive_failures);
                self.trigger_failover(component).await;
            }
        }
        
        state.last_check_timestamp = std::time::SystemTime::now()
            .duration_since(std::time::UNIX_EPOCH)
            .unwrap()
            .as_secs();
    }
    
    /// Check SVM processor health
    async fn check_svm_processor(&self) -> Result<HashMap<String, String>, String> {
        // TODO: Implement actual SVM processor health check
        let mut metrics = HashMap::new();
        metrics.insert("transactions_processed".to_string(), "1000".to_string());
        metrics.insert("average_processing_time_ms".to_string(), "8".to_string());
        metrics.insert("queue_depth".to_string(), "5".to_string());
        Ok(metrics)
    }
    
    /// Check message bus health
    async fn check_message_bus(&self) -> Result<HashMap<String, String>, String> {
        // TODO: Implement actual message bus health check
        let mut metrics = HashMap::new();
        metrics.insert("connected_nodes".to_string(), "3".to_string());
        metrics.insert("messages_per_second".to_string(), "100".to_string());
        metrics.insert("error_rate".to_string(), "0.01".to_string());
        Ok(metrics)
    }
    
    /// Check gRPC server health
    async fn check_grpc_server(&self) -> Result<HashMap<String, String>, String> {
        // TODO: Implement actual gRPC server health check
        let mut metrics = HashMap::new();
        metrics.insert("active_connections".to_string(), "50".to_string());
        metrics.insert("requests_per_second".to_string(), "200".to_string());
        metrics.insert("average_latency_ms".to_string(), "5".to_string());
        Ok(metrics)
    }
    
    /// Check connection pool health
    async fn check_connection_pool(&self) -> Result<HashMap<String, String>, String> {
        // TODO: Implement actual connection pool health check
        let mut metrics = HashMap::new();
        metrics.insert("total_connections".to_string(), "20".to_string());
        metrics.insert("healthy_connections".to_string(), "19".to_string());
        metrics.insert("pool_utilization".to_string(), "0.4".to_string());
        Ok(metrics)
    }
    
    /// Trigger failover for a component
    async fn trigger_failover(&self, component: &str) {
        warn!("Triggering failover for component: {}", component);
        
        match component {
            "svm_processor" => {
                // TODO: Implement SVM processor failover
                info!("Switching to backup SVM processor");
            }
            "message_bus" => {
                // TODO: Implement message bus failover
                info!("Reconnecting to alternative message bus endpoints");
            }
            "grpc_server" => {
                // TODO: Implement gRPC server failover
                info!("Restarting gRPC server with new configuration");
            }
            _ => {
                warn!("No failover strategy for component: {}", component);
            }
        }
    }
    
    /// Get current health status
    pub async fn check_health(&self, components: Vec<String>) -> HealthCheckResult {
        let components_map = self.components.read().await;
        
        let filtered_components = if components.is_empty() {
            components_map.clone()
        } else {
            components_map.iter()
                .filter(|(k, _)| components.contains(k))
                .map(|(k, v)| (k.clone(), v.clone()))
                .collect()
        };
        
        let overall_healthy = filtered_components.values().all(|c| c.healthy);
        let uptime_seconds = self.start_time.elapsed().as_secs();
        
        HealthCheckResult {
            healthy: overall_healthy,
            components: filtered_components,
            uptime_seconds,
        }
    }
    
    /// Register a custom health check
    pub async fn register_health_check(
        &self,
        component: String,
        check_interval: std::time::Duration,
    ) {
        self.check_intervals.get(&component).map(|_| {
            warn!("Component {} already has a health check registered", component);
        });
        
        info!("Registering health check for component: {} with interval: {:?}", 
            component, check_interval);
    }
    
    /// Get health metrics for monitoring
    pub async fn get_metrics(&self) -> HealthMetrics {
        let components = self.components.read().await;
        
        let total_components = components.len();
        let healthy_components = components.values().filter(|c| c.healthy).count();
        let unhealthy_components = total_components - healthy_components;
        
        let component_statuses: HashMap<String, bool> = components.iter()
            .map(|(k, v)| (k.clone(), v.healthy))
            .collect();
        
        HealthMetrics {
            total_components,
            healthy_components,
            unhealthy_components,
            uptime_seconds: self.start_time.elapsed().as_secs(),
            component_statuses,
        }
    }
}

/// Health metrics for monitoring
#[derive(Debug, Clone)]
pub struct HealthMetrics {
    pub total_components: usize,
    pub healthy_components: usize,
    pub unhealthy_components: usize,
    pub uptime_seconds: u64,
    pub component_statuses: HashMap<String, bool>,
}

/// Failover strategy configuration
#[derive(Debug, Clone)]
pub struct FailoverConfig {
    /// Maximum consecutive failures before failover
    pub max_consecutive_failures: u32,
    
    /// Failover timeout
    pub failover_timeout: std::time::Duration,
    
    /// Retry interval after failover
    pub retry_interval: std::time::Duration,
}

impl Default for FailoverConfig {
    fn default() -> Self {
        Self {
            max_consecutive_failures: 3,
            failover_timeout: std::time::Duration::from_secs(30),
            retry_interval: std::time::Duration::from_secs(60),
        }
    }
}

#[cfg(test)]
mod tests {
    use super::*;
    
    #[tokio::test]
    async fn test_health_service_creation() {
        let service = HealthService::new();
        let result = service.check_health(vec![]).await;
        assert!(result.healthy); // Should be healthy initially
        assert_eq!(result.components.len(), 0); // No components checked yet
    }
    
    #[tokio::test]
    async fn test_health_metrics() {
        let service = HealthService::new();
        let metrics = service.get_metrics().await;
        assert_eq!(metrics.total_components, 0);
        assert_eq!(metrics.healthy_components, 0);
        assert_eq!(metrics.unhealthy_components, 0);
    }
}